bluec-tests/tests/invalid/typedef/no_underlying_type.c
int main(void) {
    typedef foo bar;
    bar x = 5;
    return x;
}
